--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
