--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-stylus": "^2.7.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-uglify": "^3.0.0",
+    "gulp.spritesmith": "^6.9.0",
+    "merge-stream": "^1.0.1",
     "normalize.css": "^7.0.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "vinyl-named": "^1.1.0",
