--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-sourcemaps": "^2.6.3",
+    "gulp-stylint": "^4.0.1",
     "gulp-stylus": "^2.7.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-uglify": "^3.0.0",
