--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.3",
+    "eslint-plugin-babel": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-eslint": "^4.0.1",
     "gulp-notify": "^3.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^3.3.0",
