--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp.spritesmith": "^6.9.0",
     "merge-stream": "^1.0.1",
     "normalize.css": "^7.0.0",
+    "swiper": "^4.1.6",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^4.0.0"
